Add color management to ImageBitmapRenderingContext

This change adds color management to ImageBitmapRenderingContext.

Bug: 782383, 785389, 796226
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I653bc2e5d3a32f5211bd09c80ee35b6f4df6ad92
Reviewed-on: https://chromium-review.googlesource.com/973801
Reviewed-by: Justin Novosad <junov@chromium.org>
Commit-Queue: Mohammad Reza Zakerinasab <zakerinasab@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557619}
Former-commit-id: 3de68da5fcc2b3594795b6afb7699a42e931999e