third_party/blink/renderer/platform/graphics/unaccelerated_static_bitmap_image.cc
@@ -60,10 +60,9 @@ UnacceleratedStaticBitmapImage::MakeAccelerated(
   if (!grcontext)
     return nullptr;  // Can happen if the context is lost.
 
-  // TODO(crbug.com/782383): This can return a SkColorSpace, which should be
-  // passed along.
+  sk_sp<SkImage> sk_image = paint_image_.GetSkImage();
   sk_sp<SkImage> gpu_skimage =
-      paint_image_.GetSkImage()->makeTextureImage(grcontext, nullptr);
+      sk_image->makeTextureImage(grcontext, sk_image->colorSpace());
   if (!gpu_skimage)
     return nullptr;
 
